# ecn_common

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  package.xml  setup.py
examples/: color_example.cpp  qp_example.cpp  test_hist.cpp  token_cpp_example.cpp  token_example.cpp  token_python_example
include/ecn_common/: color_detector.h  qr.h  token.h  token_handle.h  urdf_tree.h  visp_utils.h  vpLinProg.h  vpQuadProg.h
launch/: requests.launch
msg/: TokenCurrent.msg  TokenRequest.msg
reinstall/: def_reinstall.sh  main_reinstall.sh  ros_system_install.sh  ros_user_setup.sh  vrep_system_install.sh
scripts/: CMakeLists.txt.user.template  gen_qtcreator  reset_config  token_manager
src/: color_detector.cpp  optim.cpp  qr.cpp  token_manager  token_manager.py  vpLinProg.cpp  vpQuadProg.cpp
src/ecn_common/: __init__.py  token.py  token_handle.py
srv/: Token.srv
